# perso-2024b-NicholasZortea

./: .gitignore  CHANGELOG.md  Main.hi  Main.hs  README.md  RUMenu.cabal  cardapio.json  video_demonstracao.webm
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: EmailsHandler.hs  MailSender.hs  Main.hs  Pages.hs  Refeicoes.hs  cardapio.json  script.js  style.css
