cabal-version:       >=1.10
name:                RUMenu
version:             0.1.0.0
license-file:        LICENSE
author:              Nicholas Zortea Graczik
maintainer:          zorteanicholas619@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable RUMenu
  main-is:             Main.hs
  exposed-modules:     EmailsHandler.hs
  hs-source-dirs:      src
  build-depends:       
    base >= 4.7 && < 5,
    http-client >= 0.5,
    http-client-tls >= 0.3,
    scotty >= 0.11,
    wai-extra >= 3,
    bytestring,
    http-types,
    text,
    aeson,
    time

  default-language:    Haskell2010